--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -20,9 +20,19 @@
     </header>
     <section class="hero">
         <div class="hero-text container">
-            <h1>Your project's missing peace.</h1>
+            <h1 class="gotham-bold">Your project's missing <span class="peace-text">peace.</span></h1>
             <p>Unique experience. Better service. Less worries.</p>
         </div>
     </section>
+    <div class="full-width-section">
+        <div>
+            <h2>Let Schumann Consulting Manage Your Project</h2>
+            <p>When you add us to your team, you bring on decades of
+                experience in the private and public sectors, you work with
+                a team of professionals dedicated to your project’s success,
+                and you enjoy peace of mind of knowing your time and
+                money are being well managed.</p>
+        </div>
+    </div>
 </body>
 </html>
