--- a/schumann/static/css/style.css
+++ b/schumann/static/css/style.css
@@ -79,7 +79,7 @@ nav a {
 
 .hero {
     position: relative;
-    background: url('../images/hero.jpeg') no-repeat center center/cover;
+    background: url('../images/hero.jpg') no-repeat center center/cover;
     height: 500px;
 }
 
@@ -91,16 +91,6 @@ nav a {
     left: 0;
     width: 100%;
     height: 100%;
-}
-
-.hero::before {
-    background: rgba(0, 0, 0, 0.5);
-    mix-blend-mode: multiply; /* Apply multiply effect */
-}
-
-.hero::after {
-    mix-blend-mode: overlay;
-    filter: saturate(2); /* Increase saturation */
 }
 
 .hero-text {
@@ -150,6 +140,12 @@ nav a {
 }
 
 div.full-width-section div h2 {
+    font-family: 'Didot-Italic', serif;
+    font-style: italic;
+    font-size: 2em;
+}
+
+.recent-projects-section h2 {
     font-family: 'Didot-Italic', serif;
     font-style: italic;
     font-size: 2em;
