--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -34,5 +34,55 @@
                 money are being well managed.</p>
         </div>
     </div>
+    <div class="container mt-5 mb-5 recent-projects-section">
+        <h2 class="text-center mb-4">Recent Projects</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 1">
+                <div class="text-center mt-2">
+                    <strong>Project 1</strong><br>
+                    <em>Category A</em>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 2">
+                <div class="text-center mt-2">
+                    <strong>Project 2</strong><br>
+                    <em>Category B</em>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 3">
+                <div class="text-center mt-2">
+                    <strong>Project 3</strong><br>
+                    <em>Category C</em>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 4">
+                <div class="text-center mt-2">
+                    <strong>Project 4</strong><br>
+                    <em>Category D</em>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 5">
+                <div class="text-center mt-2">
+                    <strong>Project 5</strong><br>
+                    <em>Category E</em>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
+                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 6">
+                <div class="text-center mt-2">
+                    <strong>Project 6</strong><br>
+                    <em>Category F</em>
+                </div>
+            </div>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary">See More</button>
+        </div>
+    </div>
 </body>
 </html>
