--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -38,45 +38,45 @@
         <h2 class="text-center mb-4">Recent Projects</h2>
         <div class="row">
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 1">
+                <img src="/static/images/333west.jpg" class="img-fluid" alt="Project 1">
                 <div class="text-center mt-2">
-                    <strong>Project 1</strong><br>
-                    <em>Category A</em>
+                    <strong>333 West San Antonio Street</strong><br>
+                    <em>Commercial Conversion</em>
                 </div>
             </div>
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 2">
+                <img src="/static/images/saludos.jpg" class="img-fluid" alt="Project 2">
                 <div class="text-center mt-2">
-                    <strong>Project 2</strong><br>
-                    <em>Category B</em>
+                    <strong>Saludos!</strong><br>
+                    <em>Restaurant/Bar</em>
                 </div>
             </div>
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 3">
+                <img src="/static/images/faust.jpg" class="img-fluid" alt="Project 3">
                 <div class="text-center mt-2">
-                    <strong>Project 3</strong><br>
-                    <em>Category C</em>
+                    <strong>Faust Hotel</strong><br>
+                    <em>Hospitality</em>
                 </div>
             </div>
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 4">
+                <img src="/static/images/crisis.jpg" class="img-fluid" alt="Project 4">
                 <div class="text-center mt-2">
-                    <strong>Project 4</strong><br>
-                    <em>Category D</em>
+                    <strong>Crisis Center of Comal County</strong><br>
+                    <em>Multifamily</em>
                 </div>
             </div>
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 5">
+                <img src="/static/images/connections.jpg" class="img-fluid" alt="Project 5">
                 <div class="text-center mt-2">
-                    <strong>Project 5</strong><br>
-                    <em>Category E</em>
+                    <strong>Connections</strong><br>
+                    <em>Office/Residential</em>
                 </div>
             </div>
             <div class="col-md-4 mb-4 d-flex flex-column align-items-center">
-                <img src="https://via.placeholder.com/200" class="img-fluid" alt="Project 6">
+                <img src="/static/images/nolls.jpg" class="img-fluid" alt="Project 6">
                 <div class="text-center mt-2">
-                    <strong>Project 6</strong><br>
-                    <em>Category F</em>
+                    <strong>Noll's Vite</strong><br>
+                    <em>Restaurant/Bar</em>
                 </div>
             </div>
         </div>
@@ -84,5 +84,36 @@
             <button class="btn btn-primary">See More</button>
         </div>
     </div>
-</body>
+    <div class="testimonial">
+        <div class="testimonial-content">
+            <p>“Working with Schumann Consulting saved our project well more than their fee. They worked with the City of New Braunfels and our GC to keep everyone on time and on budget. I couldn't recommend them enough.”</p>
+            <p class="testimonial-author"><em>Gary Seals, Further Holdings</em></p>
+        </div>
+    </div>
+    <!-- Footer Section -->
+    <div class="footer-container">
+        <div class="footer-content">
+            <div class="footer-column-left">
+                <ul class="footer-links">
+                    <li><a href="#">PROJECT MANAGEMENT</a></li>
+                    <li><a href="#">PROJECTS</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </div>
+            <div class="footer-column-right">
+                <ul class="footer-address">
+                    <li>SCHUMANN CONSULTING</li>
+                    <li>977 NORTH LIVE OAK</li>
+                    <li>NEW BRAUNFELS, TEXAS 78130</li>
+                    <li><a href="#">MAP</a></li>
+                    <li>PHONE (830) 327-1254</li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom-text">
+            <p>&copy; 20224 MOSSBACK CONSTRUCTION DBA SCHUMANN CONSULTING</p>
+        </div>
+    </div>
+ </body>
 </html>
