--- a/schumann/templates/projects.html
+++ b/schumann/templates/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schumann Project</title>
+    <title>Projects - Schumann Consulting</title>
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 </head>
@@ -12,7 +12,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="navbar-nav mx-auto">
                 <a class="nav-item nav-link" href="#">Project Management</a>
-                <a class="nav-item nav-link" href="/projects">Projects</a>
+                <a class="nav-item nav-link" href="#">Projects</a>
                 <a class="nav-item nav-link" href="#">About</a>
                 <a class="nav-item nav-link" href="#">Contact</a>
             </div>
@@ -20,20 +20,10 @@
     </header>
     <section class="hero">
         <div class="hero-text container">
-            <h1 class="gotham-bold">Your project's missing <span class="peace-text">peace.</span></h1>
-            <p>Unique experience. Better service. Less worries.</p>
+            <h1 class="gotham-bold">Projects</h1>
+            <p>Schumann Consulting treats every project like it's the most important. Because it is.</p>
         </div>
     </section>
-    <div class="full-width-section">
-        <div>
-            <h2>Let Schumann Consulting Manage Your Project</h2>
-            <p>When you add us to your team, you bring on decades of
-                experience in the private and public sectors, you work with
-                a team of professionals dedicated to your project’s success,
-                and you enjoy peace of mind of knowing your time and
-                money are being well managed.</p>
-        </div>
-    </div>
     <div class="container mt-5 mb-5 recent-projects-section">
         <h2 class="text-center mb-4">Recent Projects</h2>
         <div class="row">
@@ -80,15 +70,6 @@
                 </div>
             </div>
         </div>
-        <div class="text-center">
-            <button class="btn btn-primary">See More</button>
-        </div>
-    </div>
-    <div class="testimonial">
-        <div class="testimonial-content">
-            <p>“Working with Schumann Consulting saved our project well more than their fee. They worked with the City of New Braunfels and our GC to keep everyone on time and on budget. I couldn't recommend them enough.”</p>
-            <p class="testimonial-author"><em>Gary Seals, Further Holdings</em></p>
-        </div>
     </div>
     <!-- Footer Section -->
     <div class="footer-container">
@@ -115,5 +96,5 @@
             <p>&copy; 20224 MOSSBACK CONSTRUCTION DBA SCHUMANN CONSULTING</p>
         </div>
     </div>
- </body>
+</body>
 </html>
