Updated README, app configuration, and templates; removed unnecessary function summary

--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -87,7 +87,7 @@
     <div class="testimonial">
         <div class="testimonial-content">
             <p>“Working with Schumann Consulting saved our project well more than their fee. They worked with the City of New Braunfels and our GC to keep everyone on time and on budget. I couldn't recommend them enough.”</p>
-            <p class="testimonial-author"><em>Gary Seals, Further Holdings</em></p>
+            <p class="testimonial-author"><em>Hudson Manlove, Further Holdings</em></p>
         </div>
     </div>
     <!-- Footer Section -->
