--- a/schumann/templates/index.html
+++ b/schumann/templates/index.html
@@ -18,6 +18,7 @@
             </div>
         </nav>
     </header>
+    <div class="overlap-box"><img src="static/images/logo.jpg" alt="Logo Image"></div> <!-- Adding the logo inside the overlap box -->
     <section class="hero">
         <div class="hero-text container">
             <h1 class="gotham-bold">Your project's missing <span class="peace-text">peace.</span></h1>
@@ -87,7 +88,7 @@
     <div class="testimonial">
         <div class="testimonial-content">
             <p>“Working with Schumann Consulting saved our project well more than their fee. They worked with the City of New Braunfels and our GC to keep everyone on time and on budget. I couldn't recommend them enough.”</p>
-            <p class="testimonial-author"><em>Hudson Manlove, Further Holdings</em></p>
+            <p class="testimonial-author"><em>Gary Seals, Further Holdings</em></p>
         </div>
     </div>
     <!-- Footer Section -->
@@ -103,11 +104,11 @@
             </div>
             <div class="footer-column-right">
                 <ul class="footer-address">
-                    <li>SCHUMANN CONSULTING</li>
                     <li>977 NORTH LIVE OAK</li>
                     <li>NEW BRAUNFELS, TEXAS 78130</li>
                     <li><a href="#">MAP</a></li>
                     <li>PHONE (830) 327-1254</li>
+                    <li><a href="https://www.linkedin.com"><img src="static/images/linkedin.png" alt="LinkedIn"></a></li>
                 </ul>
             </div>
         </div>
